# emr-backend

./: .gitignore  comprehensive_test.py  create_diagnosis_visit_tables.py  create_test_user.py  debug_middleware.py  final_test.py  main.py  pyproject.toml  quick_test.py  requirements.txt  seed.py  simple_debug.py  spec.md  start.sh  test_all_users.py  test_api.py  test_auth.py  test_crud_operations.py  test_db.py  test_endpoints.py  test_inventory.py  test_live_server.py  test_medical_records_auth.py  test_new_patient_signup.py  test_patient_creation.py  test_patient_permissions_fix.py  test_registration_endpoint.py  tmp_fix.py
alembic/: env.py
alembic/versions/: d8aa00e88299_add_patient_fields_to_medical_records.py
app/: config.py  database.py  dependencies.py  main.py
app/agents/: base_agent.py  billing_agent.py  diagnosis_agent.py  lab_agent.py  labs_agent.py  prescription_agent.py  records_agent.py
app/core/: config.py  security.py
app/db/: session.py
app/models/: __init__.py  ai_session.py  appointment.py  billing.py  clinic.py  diagnosis.py  doctor.py  inventory.py  lab_result.py  medical_record.py  models.py  patient.py  prescription.py  user.py  visit.py  vital.py
app/routers/: ai.py  appointments.py  auth.py  billing.py  clinics.py  diagnosis.py  doctors.py  inventory.py  lab_results.py  medical_records.py  patients.py  prescriptions.py  users.py  visits.py  vitals.py
app/schemas/: ai_session.py  appointment.py  billing.py  (+12 more)
scripts/: add_record_title.py  initialize_db.py  test_record_addition.py  update_db_for_records.py
tests/: test_agents.py
(+9 files in other folders)
